--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -49,5 +49,6 @@
         "iomanip": "cpp",
         "fstream": "cpp"
     },
-    "liveServer.settings.port": 5501
+    "liveServer.settings.port": 5501,
+    "C_Cpp.default.compilerPath": "C:\\MinGW\\bin\\gcc.exe"
 }
